--- a/index.html
+++ b/index.html
@@ -6,27 +6,26 @@
   </head>
   <body>
     <header class="main-header">
-      <section class="main-header-top">
-        <h2 class="visually-hidden">Управление корзиной, закладками и поиском</h2>
+      <div class="main-header-top">
         <a href="#" class="logo header-logo">Техномарт</a>
         <form class="search-form">
           <input type="search" class="search-field" name="search" value="Поиск">
         </form>
-        <span>Закладки: 0</span>
-        <span class="cart">Корзина: 0</span>
+        <a href="#">Закладки: 0</a>
+        <a href="#" class="cart">Корзина: 0</a>
         <a href="#" class="button order-button">Оформить заказ</a>
-      </section>
-      <section class="main-header-middle">
+      </div>
+      <div class="main-header-middle">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <p class="main-header-contacts">
           <span>+7 (812) 555-05-55</span>
           <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
         <div class="user-authorization">
-          <a class="button sign-in-button">Войти</a>
-          <a class="button sign-up-button">Регистрация</a>
+          <a href="#" class="button sign-in-button">Войти</a>
+          <a href="#" class="button sign-up-button">Регистрация</a>
         </div>
-      </section>
+      </div>
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li><a href="#">Главная</a></li>
@@ -89,23 +88,31 @@
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <span class="last-price">32500 Р.</span>
             <span class="current-price">25500 Р.</span>
+            <button class="button buy-item-button" type="button">Купить</button>
+            <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
             <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="last-price">22500 Р.</span>
             <span class="current-price">15500 Р.</span>
+            <button class="button buy-item-button" type="button">Купить</button>
+            <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
             <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="last-price">30500 Р.</span>
             <span class="current-price">25500 Р.</span>
+            <button class="button buy-item-button" type="button">Купить</button>
+            <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
             <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
+            <button class="button buy-item-button" type="button">Купить</button>
+            <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
         </ul>
       </section>
@@ -165,7 +172,7 @@
         </p>
         <ul class="service-list">
           <li class="service-item">
-            <span>Доставка</span>
+            <span tabindex="0">Доставка</span>
             <div class="service-item-delivery">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо
@@ -175,7 +182,7 @@
             </div>
           </li>
           <li class="service-item">
-            <span>Гарантия</span>
+            <span tabindex="0">Гарантия</span>
             <div class="service-item-guarantee">
               <h3>Гарантия</h3>
               <p>Если купленный у нас товар поломается или заискрит,
@@ -186,7 +193,7 @@
             </div>
           </li>
           <li class="service-item">
-            <span>Кредит</span>
+            <span tabindex="0">Кредит</span>
             <div class="service-item-credit">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще!
@@ -214,32 +221,32 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами,
             заехав в наш офис:</p>
-          <img src="img/minimap.png" width="300" height="158" alt="Расположение компании «Техномарт»">
+          <a href="#"><img src="img/minimap.png" width="300" height="158" alt="Расположение компании «Техномарт»"></a>
           <a href="#" class="button">Заблудились? Напишите нам!</a>
         </div>
       </section>
     </main>
     <footer class="main-footer">
       <section class="main-footer-top">
-        <h2 class="visually-hidden">Нижнее меню сайта и контактная информация</h2>
+        <h2 class="visually-hidden">Нижнее меню сайта</h2>
         <span class="logo footer-logo">Техномарт</span>
         <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           +7 (812) 555-05-55</p>
-          <nav class="main-footer-navigation">
-            <ul class="footer-navigation-top">
-              <li class="footer-navigation-top-item"><a href="#">Компания</a></li>
-              <li class="footer-navigation-top-item"><a href="#">Новости</a></li>
-              <li class="footer-navigation-top-item"><a href="catalog.html">Каталог</a></li>
-              <li class="footer-navigation-top-item"><a href="#">Доставка</a></li>
-              <li class="footer-navigation-top-item"><a href="#">Контакты</a></li>
-            </ul>
-            <ul class="footer-navigation-bottom">
-              <li class="footer-navigation-bottom-item"><a href="#">Материалы</a></li>
-              <li class="footer-navigation-bottom-item"><a href="#">Техника</a></li>
-              <li class="footer-navigation-bottom-item"><a href="#">Инструмент</a></li>
-              <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
-            </ul>
-          </nav>
+        <nav class="main-footer-navigation">
+          <ul class="footer-navigation-top">
+            <li class="footer-navigation-top-item"><a href="#">Компания</a></li>
+            <li class="footer-navigation-top-item"><a href="#">Новости</a></li>
+            <li class="footer-navigation-top-item"><a href="catalog.html">Каталог</a></li>
+            <li class="footer-navigation-top-item"><a href="#">Доставка</a></li>
+            <li class="footer-navigation-top-item"><a href="#">Контакты</a></li>
+          </ul>
+          <ul class="footer-navigation-bottom">
+            <li class="footer-navigation-bottom-item"><a href="#">Материалы</a></li>
+            <li class="footer-navigation-bottom-item"><a href="#">Техника</a></li>
+            <li class="footer-navigation-bottom-item"><a href="#">Инструмент</a></li>
+            <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
+          </ul>
+        </nav>
       </section>
       <section class="main-footer-bottom">
         <h2 class="visually-hidden">Контактная информация</h2>
@@ -251,10 +258,28 @@
           <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart">Insta</a></li>
         </ul>
         <p class="main-footer-email">Обратная связь:
-          mail@htmlacademy.ru</p>
+            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
         <p class="main-footer-developer">Разработано —
           <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
       </section>
     </footer>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Основная карта</h2>
+      <img src="img/map.png" width="970" height="476" alt="Расположение Техномарта на карте">
+      <button class="map-close-button" type="button" aria-label="Закрыть карту" tabindex="0">X</button>
+    </section>
+    <section class="modal modal-write-us">
+      <h2 class="visually-hidden">Форма обратной связи</h2>
+      <button class="modal-close-button" type="button" aria-label="Закрыть окно обратной связи" tabindex="0">X</button>
+      <form class="modal-form" action="https://echo.htmlacademy.ru" method="get">
+        <label for="name">Ваше имя:</label>
+        <input type="text" id="name" name="name" placeholder="Имя Фамилия">
+        <label for="email">Ваш e-mail:</label>
+        <input type="text" id="email" name="email" placeholder="email@example.com">
+        <label for="letter-text">Текст письма</label>
+        <textarea id="letter-text" name="letter-text" placeholder="В свободной форме"></textarea>
+        <input class="button modal-form-button" type="submit" value="Отправить">
+      </form>
+    </section>
   </body>
 </html>
