Optimization of CSS-code

--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <nav class="main-navigation">
-        <ul class="site-navigation">
+        <ul class="site-navigation list-marker-switch">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Каталог</a></li>
@@ -45,13 +45,13 @@
       </nav>
     </header>
     <main class="container">
-      <ul class="breadcrumbs">
+      <ul class="breadcrumbs list-marker-switch">
         <li><a href="index.html" aria-label="Главная"><img src="img/icon-home.svg" width="15" height="12" alt="Главная"></a></li>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li><a href="#">Перфораторы</a></li>
       </ul>
-      <div class="catalog-title-block"><h1 class="catalog-main-title">Перфораторы</h1></div>
+      <div class="catalog-title-block"><h1 class="catalog-main-title basic-title">Перфораторы</h1></div>
       <section class="filters">
         <h2 class="main-filter-title">Фильтр:</h2>
         <form class="filter-form" action="https://echo.htmlacademy.ru" method="get">
@@ -82,7 +82,7 @@
       <section class="catalog">
         <div class="sorting">
           <h2 class="sorting-title">Сортировка:</h2>
-          <ul class="sorting-list">
+          <ul class="sorting-list list-marker-switch">
             <li class="sorting-item"><a href="#" class="sorting-link sorting-link-price sorting-link-active">По цене</a></li>
             <li class="sorting-item"><a href="#" class="sorting-link sorting-link-type">По типу</a></li>
             <li class="sorting-item"><a href="#" class="sorting-link sorting-link-functions">По функционалу</a></li>
@@ -90,7 +90,7 @@
           <a href="#" class="sorting-toggle sorting-min-toggle active-toggle" aria-label="Сначала дешевые"></a>
           <a href="#" class="sorting-toggle sorting-max-toggle" aria-label="Сначала дорогие"></a>
         </div>
-        <ul class="catalog-list">
+        <ul class="catalog-list list-marker-switch">
           <li class="catalog-list-item">
             <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
@@ -161,7 +161,7 @@
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
         </ul>
-        <ul class="pagination-list">
+        <ul class="pagination-list list-marker-switch">
           <li class="pagination-item pagination-item-current"><a>1</a></li>
           <li class="pagination-item"><a href="#">2</a></li>
           <li class="pagination-item"><a href="#">3</a></li>
@@ -169,8 +169,8 @@
         </ul>
       </section>
       <section class="puncher-info">
-        <h2 class="puncher-info-title">Пара слов о перфораторах</h2>
-        <p>
+        <h2 class="puncher-info-title basic-title">Пара слов о перфораторах</h2>
+        <p class="basic-text">
           Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
           Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В
           ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
@@ -183,14 +183,14 @@
         <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           +7 (812) 555-05-55</p>
           <nav class="main-footer-navigation">
-            <ul class="footer-navigation-top">
+            <ul class="footer-navigation-top list-marker-switch">
               <li class="footer-navigation-top-item"><a href="#">Компания</a></li>
               <li class="footer-navigation-top-item"><a href="#">Новости</a></li>
               <li class="footer-navigation-top-item"><a href="#">Каталог</a></li>
               <li class="footer-navigation-top-item"><a href="#">Доставка</a></li>
               <li class="footer-navigation-top-item"><a href="#">Контакты</a></li>
             </ul>
-            <ul class="footer-navigation-bottom">
+            <ul class="footer-navigation-bottom list-marker-switch">
               <li class="footer-navigation-bottom-item"><a href="#">Материалы</a></li>
               <li class="footer-navigation-bottom-item"><a href="#">Техника</a></li>
               <li class="footer-navigation-bottom-item"><a href="#">Инструмент</a></li>
@@ -201,7 +201,7 @@
       <div class="main-footer-bottom">
         <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
           Все права защищены</p>
-        <ul class="social-link-list">
+        <ul class="social-link-list list-marker-switch">
           <li class="social-link-item social-link-vk"><a href="vk.com/technomart"></a></li>
           <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
           <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
