--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <nav class="main-navigation">
-        <ul class="site-navigation">
+        <ul class="site-navigation list-marker-switch">
           <li><a href="#">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -43,7 +43,7 @@
     </header>
     <main class="container">
       <section class="offers">
-        <ul class="offers-list">
+        <ul class="offers-list list-marker-switch">
           <li class="offers-item materials-item">
             <h3>Материалы</h3>
             <a href="#" class="button offers-item-button">На любой вкус</a>
@@ -57,7 +57,7 @@
             <a href="#" class="button offers-item-button">Для стройки</a>
           </li>
           <li class="offers-item offers-item-slider">
-            <ul class="slider">
+            <ul class="slider list-marker-switch">
               <li class="slider-item slider-item-drill">
                 <h3>Дрели</h3>
                 <span>Соседям на радость!</span>
@@ -82,10 +82,10 @@
       </section>
       <section class="popular-products">
         <header class="popular-products-header">
-          <h2>Популярные товары:</h2>
+          <h2 class="basic-title">Популярные товары:</h2>
           <a href="#" class="button popular-products-button">Все популярные товары</a>
         </header>
-        <ul class="catalog-list">
+        <ul class="catalog-list list-marker-switch">
           <li class="catalog-list-item">
             <img src="img/bfg-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             <h3>Перфоратор BOSCH BFG 9000</h3>
@@ -121,10 +121,10 @@
       </section>
       <section class="popular-brands">
         <header class="popular-brands-header">
-          <h2>Популярные производители:</h2>
+          <h2 class="basic-title">Популярные производители:</h2>
           <a href="#" class="button popular-brands-button">Все производители</a>
         </header>
-        <ul class="popular-brands-list">
+        <ul class="popular-brands-list list-marker-switch">
           <li class="popular-brands-item">
             <a href="#">
               <img src="img/Bosch.jpg" width="126" height="37" alt="BOSCH">
@@ -168,17 +168,17 @@
         </ul>
       </section>
       <section class="service">
-        <h2>Сервисы</h2>
-        <p>
+        <h2 class="basic-title">Сервисы</h2>
+        <p class="basic-text">
           Хороший интернет-магазин отличается от плохого не только ценами!
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
         </p>
-        <ul class="service-list">
+        <ul class="service-list list-marker-switch">
           <li class="service-item">
             <span tabindex="0">Доставка</span>
             <section class="service-item-delivery">
               <h3>Доставка</h3>
-              <p>Мы с удовольствием доставим ваш товар прямо
+              <p class="basic-text">Мы с удовольствием доставим ваш товар прямо
                 к вашему подъезду совершенно бесплатно!
                 Ведь мы неплохо заработаем,
                 поднимая его на ваш этаж!</p>
@@ -188,7 +188,7 @@
             <span tabindex="0">Гарантия</span>
             <section class="service-item-guarantee">
               <h3>Гарантия</h3>
-              <p>Если купленный у нас товар поломается или заискрит,
+              <p class="basic-text">Если купленный у нас товар поломается или заискрит,
                 а также в случае пожара, спровоцированного его возгаранием,
                 вы всегда можете быть уверены в нашей гарантии. Мы обменяем
                 сгоревший товар на новый.
@@ -199,7 +199,7 @@
             <span tabindex="0">Кредит</span>
             <section class="service-item-credit">
               <h3>Кредит</h3>
-              <p>Залезть в долговую яму стало проще!
+              <p class="basic-text">Залезть в долговую яму стало проще!
                 Кредитные консультанты придут вам на помощь.</p>
               <a href="#" class="button credit-request-button">Отправить заявку</a>
             </section>
@@ -208,10 +208,10 @@
       </section>
       <section class="company-information">
         <div class="company-ability">
-          <h2>Компания «Техномарт»</h2>
-          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+          <h2 class="basic-title">Компания «Техномарт»</h2>
+          <p class="basic-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
             строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России!
+          <p class="basic-text">Мы можем доставить ваш товар в самые отдаленные точки России!
             Техномарт работает со многими транспортными компаниями:</p>
           <ul class="transport-company-list">
             <li>Деловые линии</li>
@@ -221,8 +221,8 @@
           <a href="#" class="button">Подробнее о компании</a>
         </div>
         <div class="company-contacts">
-          <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами,
+          <h2 class="basic-title">Контакты</h2>
+          <p class="basic-text">Вы можете забрать товар сами,
             заехав в наш офис:</p>
           <a href="#"><img src="img/minimap.png" width="300" height="158" alt="Расположение компании «Техномарт»"></a>
           <a href="#" class="button">Заблудились? Напишите нам!</a>
@@ -235,14 +235,14 @@
         <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           +7 (812) 555-05-55</p>
         <nav class="main-footer-navigation">
-          <ul class="footer-navigation-top">
+          <ul class="footer-navigation-top list-marker-switch">
             <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
-          <ul class="footer-navigation-bottom">
+          <ul class="footer-navigation-bottom list-marker-switch">
             <li><a href="#">Материалы</a></li>
             <li><a href="#">Техника</a></li>
             <li><a href="#">Инструмент</a></li>
@@ -253,7 +253,7 @@
       <div class="main-footer-bottom">
         <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
           Все права защищены</p>
-        <ul class="social-link-list">
+        <ul class="social-link-list list-marker-switch">
           <li class="social-link-item social-link-vk"><a href="vk.com/technomart"></a></li>
           <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
           <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
